--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ipadresto",
-    "short_name": "ipadresto",
+    "name": "Curry Island",
+    "short_name": "Curry Island",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
