--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,5 +97,6 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/app-logo.png"
-  min_sdk_android: 21
+  image_path: "assets/images/applogo.png"
+  adaptive_icon_background: "#ffffff" 
+  adaptive_icon_foreground: "assets/images/applogo.png"
